# ANIM3D_PROJECT

./: CMakeLists.txt  README.md  imgui.ini
main/: main.cpp
main/helper_scene/: helper_scene.cpp
scenes/: current_scene.hpp  scenes.hpp
scenes/animation/00_default/: default.cpp  default.hpp
scenes/animation/01_animation_descriptive/: articulated_hierarchy.cpp  interpolation_position.cpp
scenes/animation/02_simulation/: cloth.cpp  cloth.hpp  example_mass_spring.cpp  example_mass_spring.hpp  sphere_collision.cpp
scenes/animation/03_skinning/: skinning.cpp
scenes/animation/Pool_game/: pool.cpp  pool.hpp  textRender.cpp  textRender.hpp
scenes/animation/Pool_game/assets/: plane_pool.mtl  pool.blend  pool.blend1  pool.mtl
vcl/interaction/camera/: camera.cpp
vcl/interaction/camera_control_glfw/: camera_control_glfw.cpp
